--- a/config/typescript/tsconfig.json
+++ b/config/typescript/tsconfig.json
@@ -1,5 +1,12 @@
 {
     "compilerOptions": {
+        "esModuleInterop": true,
+        "target": "ES6",
+        "jsx":"react",
+        "lib": [
+            "es6",
+            "dom"
+        ],
         "sourceMap": true
     }
 }
